# STM32-Car-Project

./: .android_direction_button.py.swo  .android_direction_button.py.swp  .gitignore  .project  MDP assessment and system checklist.docx  README.md  README.md.txt  add_txt_copies_Version2.py.txt  android_direction_button.py  commands.py  consts.py  logfile.txt  restart_bt.sh  run_t2.py  run_t2.py.txt  run_tt.py  settings.py
algo/: .main.py.swp  README.md  main.py  main.py.txt  requirements.txt
android/: .gitignore  settings.gradle.kts
api/: README.md.txt  api.py  api_t2.py.txt  requirements.txt
image_rec/: README.md  model.py.txt  model_t2.py  requirements.txt  snap.py  task2.py  task2.py.txt  test2.py  test3.py  test4.py  test5.py  test6.py
rpi/: .task1.py.swo  .task1.py.swp  README.md  __init__.py  base_rpi.py  base_rpi.py.txt  base_t2.py  base_t2.py.txt  checklist_a1.py.txt  checklist_a3.py  checklist_a5.py.txt  pyproject.toml  task1.py  task1.py.txt  task2_indoor.py  task2_outdoor.py
rpi/checklist/: a5_with_bluetooth.py  checklist_a1.py  checklist_a5.py  checklist_a5_without_android.py
rpi/communication/: .android.py.swp  android.py  android.py.txt  camera.py  camera.py.txt  dummy_stm32.py  link.py  link.py.txt  pi_action.py  stm32.py  stm32.py.txt
rpi/constant/: .settings.py.swp  consts.py.txt  settings.py
rpi/test/: test_andriod.py.txt  test_andriod_message.py.txt  test_api_server.py.txt  test_event_manager.py.txt  test_ir.py.txt  test_opencv.py.txt  test_picamera.py.txt  test_pycam2.py.txt  test_server.py.txt  test_stm.py  test_stm.py.txt
(+504 files in other folders)
